--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -34,14 +34,10 @@
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="dropdown-header text-center"><strong>Soufiane Marar</strong><br/><small>Administrateur</small></div>
         <div class="divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-envelope-o"></i> Messages<span class="badge badge-success">122</span></a>
-        <a class="dropdown-item" href="#"><i class="fa fa-newspaper-o"></i> News<span class="badge badge-danger">12</span></a>
-        <a class="dropdown-item" href="#"><i class="fa fa-comments"></i> Comment<span class="badge badge-warning">7</span></a>
-        <div class="dropdown-header text-center"><strong>Settings</strong></div>
         <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>
-        <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Security</a>
+        <a class="dropdown-item" href="#"><i class="fa fa-cog"></i> Sécurité</a>
         <div class="divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i> Logout</a>
+        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i> Déconnexion</a>
       </div>
     </li>
   </ul>
@@ -335,5 +331,5 @@
 </div>
 <app-footer>
   <span></span>
-  <span class="ml-auto">Powered by (Soufiane Marar, Hamza Elatif, Yassine Atir, Abdelkrim Ihnoussa)</span>
+  <span class="ml-auto">PFE MIAM M2 2020</span>
 </app-footer>
